--- a/Lab1/src/main/webapp/index.html
+++ b/Lab1/src/main/webapp/index.html
@@ -4,15 +4,14 @@
         <meta charset="UTF-8">
         <title>Index page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <script src="/js/jquery-3.3.1.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!--<link rel="stylesheet" href="/css/main.css">-->
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <!--<div id="all-width">dddd</div>-->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -21,9 +20,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form action="/action_page.php">
+                    <form action="index" method="post">
                         <div class="form-group btn-group col-lg-12">
-                            <input type="text" class="form-control">
+                            <input name="text" type="text" class="form-control">
                             <button type="submit" class="btn btn-primary">Submit</button>
 
                             <div class="btn-group">
