--- a/Lab1/src/main/webapp/index.html
+++ b/Lab1/src/main/webapp/index.html
@@ -10,6 +10,10 @@
         <script src="js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <!-- IE -->
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <!-- other browsers -->
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
     </head>
     <body>
         <div class="container">
